--- a/style.css
+++ b/style.css
@@ -76,7 +76,6 @@ a {
   font-size: 16px;
 }
 
-
 .navbar-fixed {
   top: 0;
   z-index: 100;
@@ -242,7 +241,6 @@ a {
   margin: auto;
   flex-direction: column-reverse;
   width: 95%;
-
 }
 
 #about-para {
@@ -273,7 +271,6 @@ a {
   width: 80%;
   margin: -10px auto;
 }
-
 
 .left {
   margin-right: 55%;
@@ -319,6 +316,10 @@ a {
 .icon-npm {
   position: relative;
   bottom: 5px;
+}
+
+.fa-sass{
+  font-size: 85%;
 }
 
 .slam-animate {
@@ -386,15 +387,12 @@ a {
   font-size: 2em;
   color: var(--white-color);
   padding: 0 20px;
-  /* border: 1px solid orange;*/
 }
 
 .project-skills {
   margin: 10px auto 30px;
-  /*width: 90%;*/
   padding: 0 20px;
   text-align: center;
-  /* border: 1px solid yellow;*/
 }
 
 .project-blurb {
@@ -472,6 +470,10 @@ a {
   font-size: 22px;
 }
 
+label{
+  font-size: 21px;
+}
+
 .swing-up-anim {
   animation: swing-up 0.7s forwards;
 }
@@ -539,23 +541,23 @@ textarea {
   font-size: 16px;
 }
 
+/* Chrome/Opera/Safari */
 ::-webkit-input-placeholder {
-  /* Chrome/Opera/Safari */
   font-size: 16px;
 }
 
+/* Firefox 19+ */
 ::-moz-placeholder {
-  /* Firefox 19+ */
   font-size: 16px;
 }
 
+/* IE 10+ */
 :-ms-input-placeholder {
-  /* IE 10+ */
   font-size: 16px;
 }
 
+/* Firefox 18- */
 :-moz-placeholder {
-  /* Firefox 18- */
   font-size: 16px;
 }
 
@@ -608,7 +610,6 @@ footer {
   margin-bottom: -10px;
 }
 
-
 #footer-icon-1 {
   margin-left: 1%;
   margin-right: 0.5%;
@@ -618,7 +619,6 @@ footer {
   margin-left: 0.5%;
   margin-right: 1%;
 }
-
 
 .fade-to-blue {
   transition: 0.4s ease-in-out;
@@ -707,6 +707,7 @@ footer {
   }
 }
 
+/* For phones held in landscape */
 @media only screen and (min-width: 610px) {
 
   #about-intro {
@@ -737,7 +738,7 @@ footer {
   }
 }
 
-/* smaller screen */
+/* For smaller screens */
 @media only screen and (min-width: 768px) {
 
   #navbar {
@@ -756,7 +757,6 @@ footer {
   #about-para {
     font-size: 20px;
     text-align: left;
-
   }
 
   .proficiency-icon {
@@ -801,6 +801,10 @@ footer {
   .heading {
     font-size: 60px;
     width: 70%;
+  }
+
+  #form-container {
+    width: 50%;
   }
 
   #form-header {
@@ -859,6 +863,7 @@ footer {
   }
 }
 
+/* For slightly larger desktops */
 @media only screen and (min-width: 1200px) {
   .left {
     margin-right: 55%;
