--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ a {
 
 .proficiency-text {
   display: block;
-  text-align: right;
+  text-align: left;
 }
 
 .proficiency-icon {
@@ -867,10 +867,10 @@ footer {
 @media only screen and (min-width: 1200px) {
   .left {
     margin-right: 55%;
-    width: 25%;
+    width: 30%;
   }
 
   .right {
-    width: 25%;
+    width: 30%;
   }
 }
